--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ronaldo - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Samir - This is my resume</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -455,7 +455,7 @@
 		    					<span class="date">2021</span>
 		    					<h2>Hulth Prize on campus competition</h2>
 		    					<span class="position">2nd place</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<p>The Hult Prize is a prestigious $1m competition that crowd-sources ideas from university-level students after challenging them to solve a pressing social issue around topics such as food security, water access, energy, and education.</p>
 	    					</div>
 	    				</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -466,7 +466,7 @@
 		    					<span class="date">2021</span>
 		    					<h2>Morocco's First Deliberative Polling</h2>
 		    					<span class="position">Participated In</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<p>This is the first experience of Deliberative Polling in Morocco which aims to exchange and determine the different opinions about subjects such as language proficiency, general culture, and extra-curricular activities at UM6P.</p>
 		    				</div>
 	    				</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -477,7 +477,7 @@
 		    					<span class="date">2021</span>
 		    					<h2>UM6P Entrepreuneur Acdemy</h2>
 		    					<span class="position">1st Place</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<p>The objective of this Bootcamp is to move from idea to action during 2.5 days of immersion in an innovation process to explore, define and develop your idea.</p>
 		    				</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -488,7 +488,7 @@
 		    					<span class="date">2020</span>
 		    					<h2>Social Entrepreneurship Weekend</h2>
 		    					<span class="position">1st Place</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<p>Social Entrepreneurship Weekend for rural girls is a Hackathon launched by the P-Curiosity LAB / UM6P innovation laboratory, which has as a challenge the education of rural girls and the promotion of the situation of rural girls.</p>
 		    				</div>
 	    				</div>
 					  </div>
